@@ -1,3 +1,8 @@
+Wed Dec 16 19:30:56 2015  Shugo Maeda  <shugo@ruby-lang.org>
+
+	* vm.c (vm_make_proc_from_block): should convert a Symbol to a Proc.
+	  [ruby-core:72083] [Bug #11811]
+
 Wed Dec 16 16:17:34 2015  Eric Wong  <e@80x24.org>
 
 	* test/ruby/test_io.rb: fix spelling errors
